about me page, added restart to game, art desc

--- a/art.html
+++ b/art.html
@@ -127,15 +127,17 @@
                 <div class="grid-item-description">Milky Way Portal</div>
             </div>
         </div>
-        <div>
+        <!--
+        <div class="grid-item">
             <img class="grid-img" src="img/space_explorer/space-planets-back.png" alt="space-planets-back">
             <div class="grid-item-description">Back Layer</div>
         </div>
-        <div>
+        <div class="grid-item">
             <img class="grid-img" src="img/space_explorer/space-planets-front.png" alt="space-planets-front">
             <div class="grid-item-description">Front Layer</div>
         </div>
-        <div>
+    -->
+        <div class="grid-item">
             <img class="grid-img" src="img/space_explorer/space-planets.png" alt="space-planets">
             <div class="grid-item-description">Space Background</div>
         </div>
@@ -147,39 +149,51 @@
         <div class="album-grid">
             <div class="grid-item">
                 <img class="grid-img" src="img/apothecary/ghost1.png" alt="ghost">
+                <div class="grid-item-description">Friendly Ghost</div>
             </div>
             <div class="grid-item">
                 <img class="grid-img" src="img/apothecary/spectre.png" alt="spectre">
+                <div class="grid-item-description">Malicious Spectre</div>
             </div>
             <div class="grid-item">
                 <img class="grid-img" src="img/apothecary/wraith.png" alt="wraith">
+                <div class="grid-item-description">Wailing Wraith</div>
             </div>
             <div class="grid-item">
                 <img class="grid-img" src="img/apothecary/shade.png" alt="shade">
+                <div class="grid-item-description">Sneaky Shades</div>
             </div>
             <div class="grid-item">
                 <img class="grid-img" src="img/apothecary/jellyfish.png" alt="jellyfish">
+                <div class="grid-item-description">Stinging Jellyfish</div>
             </div>
             <div class="grid-item">
                 <img class="grid-img" src="img/apothecary/shadow.png" alt="shadow">
+                <div class="grid-item-description">Pale Shadow</div>
             </div>
             <div class="grid-item">
                 <img class="grid-img" src="img/apothecary/nightmare.png" alt="nightmare">
+                <div class="grid-item-description">Twilight Nightmare</div>
             </div>
             <div class="grid-item">
                 <img class="grid-img" src="img/apothecary/health_potion.png" alt="health_potion">
+                <div class="grid-item-description">Health Potion</div>
             </div>
             <div class="grid-item">
                 <img class="grid-img" src="img/apothecary/spell_potion.png" alt="spell_potion">
+                <div class="grid-item-description">Spell Potion</div>
             </div>
             <div class="grid-item">
                 <img class="grid-img" src="img/apothecary/life_potion.png" alt="life_potion">
+                <div class="grid-item-description">Life Potion</div>
             </div>
             <div class="grid-item">
                 <img class="grid-img" src="img/apothecary/chest.png" alt="chest">
+                <div class="grid-item-description">Treasure Chest</div>
             </div>
             <div class="grid-item">
                 <img class="grid-img" src="img/apothecary/background.png" alt="background">
+                <div class="grid-item-description">Dungeon Background</div>
             </div>
         </div>
     </div>
@@ -190,33 +204,40 @@
         <div class="album-grid">
             <div class="grid-item">
                 <img class="grid-img" src="img/art_portfolio/digital/ghost.jpg" alt="ghost">
+                <div class="grid-item-description">Travelers</div>
             </div>
             <div class="grid-item">
                 <img class="grid-img" src="img/art_portfolio/digital/sage.png" alt="sage">
+                <div class="grid-item-description">Creatures of the Forest</div>
             </div>
         </div>
 
         <div class="album-grid">
             <div class="grid-item">
                 <img class="grid-img" src="img/art_portfolio/digital/fireplace-t.png" alt="fireplace">
+                <div class="grid-item-description">Fireside</div>
             </div>
         </div>
 
         <div class="album-grid">
             <div class="grid-item">
                 <img class="grid-img" src="img/art_portfolio/digital/webpage-clouds.png" alt="clouds">
+                <div class="grid-item-description">Clouds Webpage</div>
             </div>
             <div class="grid-item">
                 <img class="grid-img" src="img/art_portfolio/digital/webpage-dark-clouds.png" alt="cloud">
+                <div class="grid-item-description">Dark Clouds Webpage</div>
             </div>
         </div>
 
         <div class="album-grid">
             <div class="grid-item">
                 <img class="grid-img" src="img/cloudfav.png" alt="cloud">
+                <div class="grid-item-description">Cloud Icon</div>
             </div>
             <div class="grid-item">
                 <img class="grid-img" src="img/coffee-script/coffeecup.png" alt="coffee">
+                <div class="grid-item-description">Coffee Cup Icon</div>
             </div>
         </div>
     </div>
@@ -224,7 +245,7 @@
     <!--physical art-->
     <div id="physical-art">
         <div class="page-title">Fine Art<span>.</span></div>
-        <div style="margin-bottom: 100px;" class="page-sub-title">Coming Soon<span>.</span></div>
+        <div style="margin-bottom: 100px;" class="page-sub-title">Coming Soon<span>!</span></div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
