--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body class="image-body space-body">
     <div id="navbar-placeholder"></div>
     <div class="page-title">Welcome to Portfolio Beyond<span>.</span></div>
-    <div class="page-sub-title">My name is <a href="about.html">Elizabeth Roberts<span>.</span></a></div>
+    <div class="page-sub-title">My name is <a href="about.html">Liz Roberts<span>.</span></a></div>
 
     <div class="central-box">
         <div class="row">
