--- a/project.html
+++ b/project.html
@@ -103,7 +103,8 @@
                         Javascript. I developed this game
                         alongside fellow students at Whitworth University, Ethan Worth and Owen Foster, for our Internet
                         Applications Development class. As a group,
-                        we went from knowing very little about web applications to developing this game in two weeks.
+                        we went from knowing very little about web applications to developing this game in two weeks. I developed 
+                        and provided the assets for this project.
                         <br><br>
                         The starship has launched from a planet deep within a distant solar system with one mission: to
                         get back
