--- a/about.html
+++ b/about.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>Portfolio Beyond</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="css/beyond.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="js/script.js" defer></script>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.11.2/css/all.css"
-    integrity="sha384-zrnmn8R8KkWl12rAZFt4yKjxplaDaT7/EUkKm7AovijfrQItFWR7O/JJn4DAa/gx" crossorigin="anonymous">
+        integrity="sha384-zrnmn8R8KkWl12rAZFt4yKjxplaDaT7/EUkKm7AovijfrQItFWR7O/JJn4DAa/gx" crossorigin="anonymous">
     <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon/favicon-16x16.png">
@@ -21,29 +23,59 @@
     <meta name="msapplication-config" content="/img/favicon/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
 </head>
-<body class="image-body space-body">
+
+<body class="image-body">
     <div id="navbar-placeholder"></div>
-    <div class="page-title">About Me<span>.</span></div>
+    <!--<div class="page-title">About Me<span>.</span></div>-->
     <div class="central-box">
         <div style="width: 100%;">
             <div class="inner-wrap-half">
-                <h1>Hello<span>!</span></h1>
-                <a class="small-logo" href="https://www.linkedin.com/in/elizabeth-roberts-in/">
-              
-                    <i class="fab fa-linkedin-in fa-2x"></i>
-                </a>
-                <a class="small-logo" href="https://github.com/eroberts22">
-                    <i class="fab fa-github fa-2x"></i>
-                </a>
+                <h1>Hello there<span>!</span></h1>
+                <br />
+                <h3>About me<span>...</span></h3>
+                <br />
+                <p class="tab">
+                    <span>//</span> graduating May 2022 with a Bachelor of Science in Computer Science <br /><br />
+                    <span>//</span> tutor for Whitworth University's Computer Science department <br /><br />
+                    <span>//</span> looking for work! <br />
+
+                </p>
+
+                <h3>Aspiring<span>...</span></h3>
+                <br />
+                <p class="tab">
+                    <span>//</span> Software Developer<br /><br />
+                    <span>//</span> Technical Artist <br />
+                </p>
+
+                <h3>My Hobbies<span>...</span></h3>
+                <br />
+                <p class="tab">
+                    <span>//</span> Video Games<br /><br />
+                    <span>//</span> Digital Art<br /><br />
+                    <span>//</span> PC Building<br />
+                </p>
             </div>
-            <div class="inner-wrap-half">
+            <div class="inner-wrap-half" >
                 <img class="img-wrap" src="img/cloudfav.png">
+                <div class="inner-wrap-half-small">
+                    <a class="small-logo" style="float: right;" href="https://www.linkedin.com/in/elizabeth-roberts-in/">
+                        <i class="fab fa-linkedin-in fa-2x"></i>
+                    </a>
+                </div>
+                <div class="inner-wrap-half-small">
+                    <a class="small-logo" href="https://github.com/eroberts22">
+                        <i class="fab fa-github fa-2x"></i>
+                    </a>
+                </div>
+
             </div>
         </div>
-        
+
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
