--- a/game.html
+++ b/game.html
@@ -29,6 +29,7 @@
     <nav>
         <ul>
             <li><a href="project.html#space-explorer">EXIT GAME</a></li>
+            <li><a href="game.html">RESTART</a></li>
         </ul>
         <div id="game-ui" class=".container-fluid">
             <div class="row">
