--- a/about.html
+++ b/about.html
@@ -60,15 +60,19 @@
                 <img class="img-wrap" src="img/cloudfav.png">
                 <div class="inner-wrap-half-small">
                     <a class="small-logo" style="float: right;" href="https://www.linkedin.com/in/elizabeth-roberts-in/">
-                        <i class="fab fa-linkedin-in fa-2x"></i>
+                        <i class="fab fa-linkedin-in fa-2x" style="float: right;" ></i>
                     </a>
                 </div>
                 <div class="inner-wrap-half-small">
-                    <a class="small-logo" href="https://github.com/eroberts22">
-                        <i class="fab fa-github fa-2x"></i>
+                    <a class="small-logo" style="float: left;" href="https://github.com/eroberts22">
+                        <i class="fab fa-github fa-2x" style="float: left;"></i>
                     </a>
                 </div>
-
+                <div style="text-align: center;">
+                    <a class="small-logo" href="#">
+                        <i class="far fa-file fa-2x"></i>
+                    </a>
+                </div>
             </div>
         </div>
 
