--- a/art.html
+++ b/art.html
@@ -203,7 +203,7 @@
         <div class="page-title">Digital Art<span>.</span></div>
         <div class="album-grid">
             <div class="grid-item">
-                <img class="grid-img" src="img/art_portfolio/digital/ghost.jpg" alt="ghost">
+                <img class="grid-img" src="img/art_portfolio/digital/ghost.png" alt="ghost">
                 <div class="grid-item-description">Travelers</div>
             </div>
             <div class="grid-item">
