--- a/project.html
+++ b/project.html
@@ -118,7 +118,7 @@
                         Fuel is
                         limited, and every evasive maneuver drains it.
                         Managing these resources is crucial, or else mission failure is inevitable. <br><br>
-                        See the game assets <a href="space-explorer-gallery.html">here</a>.
+                        See the game assets <a href="art.html#space-explorer">here</a>.
                     </p>
                 </div>
                 <div class="inner-wrap-half">
@@ -137,7 +137,7 @@
             <div style="width: 100%;">
                 <div class="inner-wrap-half">
                     <p>See the source code <a href="https://github.com/eroberts22/apothecary">here</a>.</p>
-                    <p>See the game assets <a href="apothecary-gallery.html">here</a>.</p>
+                    <p>See the game assets <a href="art.html#haunted-apothecary">here</a>.</p>
                 </div>
                 <div class="inner-wrap-half">
                     <img class="img-wrap" src="img/apothecary/shadow.png" alt="apothecary">
