--- a/project.html
+++ b/project.html
@@ -48,6 +48,7 @@
                         <a href="#space-explorer">
                             <img class="card-img-top" src="img/space-explorer.png" alt="space-explorer">
                         </a>
+                        <p>A JavaScript Game</p>
                     </div>
                 </div>
             </div>
@@ -58,6 +59,7 @@
                         <a href="#haunted-apothecary">
                             <img class="card-img-top" src="img/apothecary/shadow.png" alt="apothecary">
                         </a>
+                        <p>A Java Game</p>
                     </div>
                 </div>
             </div>
@@ -68,10 +70,47 @@
                         <a href="#coffee-script">
                             <img class="card-img-top" src="img/coffee-script/coffeecup.png" alt="coffeescript">
                         </a>
+                        <p>A Scanner and Parser</p>
                     </div>
                 </div>
             </div>
         </div>
+        <div class="row py-2">
+            <div class="col-lg-4 col-sm-12 py-2">
+                <div class="card text-white bg-gray mb-3 text-center h-100 hoverable">
+                    <div class="card-body">
+                        <h2 class="card-title">3D Asteroids</h2>
+                        <a href="https://lizroberts2000.wixsite.com/asteroids-3d">
+                            <img class="card-img-top" src="img/space_explorer/asteroid1.png" alt="asteroid">
+                        </a>
+                        <p>A C++/OpenGL 3D Asteroids</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-12 py-2">
+                <div class="card text-white bg-gray mb-3 text-center h-100 hoverable">
+                    <div class="card-body">
+                        <h2 class="card-title">Portfolio Beyond</h2>
+                        <a href="https://github.com/eroberts22/portfoliobeyond">
+                            <img class="card-img-top" src="img/cloudfav.png" alt="cloud">
+                        </a>
+                        <p>This Website</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-12 py-2">
+                <div class="card text-white bg-gray mb-3 text-center h-100 hoverable">
+                    <div class="card-body">
+                        <h2 class="card-title">Farm Simulation</h2>
+                        <a href="https://lizroberts2000.wixsite.com/garden-simulation">
+                            <img class="card-img-top" src="img/cloudfav.png" alt="garden">
+                        </a>
+                        <p>A C++ Command Prompt Game</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+<!--
         <div class="row">
             <div class="col-lg-12">
                 <div class="card text-white bg-gray mb-3">
@@ -90,7 +129,7 @@
             </div>
         </div>
     </div>
-
+-->
     <!--Space Explorer-->
     <div id="space-explorer">
         <div class="page-title">Space Explorer<span>.</span></div>
