--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
                     </a>
                 </div>
                 <div style="text-align: center;">
-                    <a class="small-logo" href="#">
+                    <a class="small-logo" href="img/resume2022.pdf" target="_blank">
                         <i class="far fa-file fa-2x"></i>
                     </a>
                 </div>
