--- a/art.html
+++ b/art.html
@@ -207,7 +207,7 @@
                 <div class="grid-item-description">Travelers</div>
             </div>
             <div class="grid-item">
-                <img class="grid-img" src="img/art_portfolio/digital/sage.png" alt="sage">
+                <img class="grid-img" src="img/art_portfolio/digital/sagecropped.png" alt="sage">
                 <div class="grid-item-description">Creatures of the Forest</div>
             </div>
         </div>
@@ -218,7 +218,21 @@
                 <div class="grid-item-description">Fireside</div>
             </div>
         </div>
-
+        
+        <div class="album-grid">
+            <div class="grid-item">
+                <img class="grid-img" src="img/cloudfav.png" alt="cloud">
+                <div class="grid-item-description">Cloud Icon</div>
+            </div>
+            <div class="grid-item">
+                <img class="grid-img" src="img/coffee-script/coffeecup.png" alt="coffee">
+                <div class="grid-item-description">Coffee Cup Icon</div>
+            </div>
+            <div class="grid-item">
+                <img class="grid-img" src="img/flower.png" alt="coffee">
+                <div class="grid-item-description">Flower Icon</div>
+            </div>
+        </div>
         <div class="album-grid">
             <div class="grid-item">
                 <img class="grid-img" src="img/art_portfolio/digital/webpage-clouds.png" alt="clouds">
@@ -230,16 +244,7 @@
             </div>
         </div>
 
-        <div class="album-grid">
-            <div class="grid-item">
-                <img class="grid-img" src="img/cloudfav.png" alt="cloud">
-                <div class="grid-item-description">Cloud Icon</div>
-            </div>
-            <div class="grid-item">
-                <img class="grid-img" src="img/coffee-script/coffeecup.png" alt="coffee">
-                <div class="grid-item-description">Coffee Cup Icon</div>
-            </div>
-        </div>
+
     </div>
 
     <!--physical art-->
