--- a/project.html
+++ b/project.html
@@ -83,7 +83,7 @@
                         <a href="https://lizroberts2000.wixsite.com/asteroids-3d">
                             <img class="card-img-top" src="img/space_explorer/asteroid1.png" alt="asteroid">
                         </a>
-                        <p>A C++/OpenGL 3D Asteroids</p>
+                        <p>A C++/OpenGL 3D Game</p>
                     </div>
                 </div>
             </div>
@@ -103,7 +103,7 @@
                     <div class="card-body">
                         <h2 class="card-title">Farm Simulation</h2>
                         <a href="https://lizroberts2000.wixsite.com/garden-simulation">
-                            <img class="card-img-top" src="img/cloudfav.png" alt="garden">
+                            <img class="card-img-top" src="img/flower.png" alt="garden">
                         </a>
                         <p>A C++ Command Prompt Game</p>
                     </div>
