--- a/about.html
+++ b/about.html
@@ -29,35 +29,55 @@
     <!--<div class="page-title">About Me<span>.</span></div>-->
     <div class="central-box">
         <div style="width: 100%;">
-            <div class="inner-wrap-half">
+            <div class="inner-wrap-twothird">
                 <h1>Hello there<span>!</span></h1>
                 <br />
                 <h3>About me<span>...</span></h3>
                 <br />
                 <p class="tab">
                     <span>//</span> graduating May 2022 with a Bachelor of Science in Computer Science <br /><br />
-                    <span>//</span> tutor for Whitworth University's Computer Science department <br /><br />
+                    <span>//</span> experience tutoring for Whitworth University's Computer Science department <br /><br />
                     <span>//</span> looking for work! <br />
-
                 </p>
 
-                <h3>Aspiring<span>...</span></h3>
+                <hr class="line-break">
+
+                <div class="inner-wrap-half">
+                    <h3>Aspiring<span>...</span></h3>
                 <br />
                 <p class="tab">
                     <span>//</span> Software Developer<br /><br />
                     <span>//</span> Technical Artist <br />
                 </p>
+                </div>
 
-                <h3>My Hobbies<span>...</span></h3>
+                <div class="inner-wrap-half">
+                     <h3>My Hobbies<span>...</span></h3>
                 <br />
                 <p class="tab">
                     <span>//</span> Video Games<br /><br />
                     <span>//</span> Digital Art<br /><br />
                     <span>//</span> PC Building<br />
                 </p>
+                </div>
+  
             </div>
-            <div class="inner-wrap-half" >
-                <img class="img-wrap" src="img/cloudfav.png">
+            <div class="inner-wrap-third" >
+                
+                <img class="img-wrap" style="padding-bottom: 20%;" src="img/witch-ta.gif">
+
+                <div style="text-align: center;">
+                    <a class="small-logo" href="https://www.linkedin.com/in/elizabeth-roberts-in/">
+                        <i class="fab fa-linkedin-in fa-2x"></i>
+                    </a>
+                    <a class="small-logo" href="https://github.com/eroberts22">
+                        <i class="fab fa-github fa-2x"></i>
+                    </a>
+                    <a class="small-logo" href="img/resume2022.pdf" target="_blank">
+                        <i class="far fa-file fa-2x"></i>
+                    </a>
+                </div>
+                <!--
                 <div class="inner-wrap-half-small">
                     <a class="small-logo" style="float: right;" href="https://www.linkedin.com/in/elizabeth-roberts-in/">
                         <i class="fab fa-linkedin-in fa-2x" style="float: right;" ></i>
@@ -73,7 +93,7 @@
                         <i class="far fa-file fa-2x"></i>
                     </a>
                 </div>
-            </div>
+            </div> -->
         </div>
 
     </div>
