--- a/about.html
+++ b/about.html
@@ -35,9 +35,10 @@
                 <h3>About me<span>...</span></h3>
                 <br />
                 <p class="tab">
-                    <span>//</span> graduating May 2022 with a Bachelor of Science in Computer Science <br /><br />
-                    <span>//</span> experience tutoring for Whitworth University's Computer Science department <br /><br />
-                    <span>//</span> looking for work! <br />
+                    <span>//</span> automation engineer for Two Barrels LLC <br /><br />
+                    <span>//</span> graduated May 2022 with a Bachelor of Science in Computer Science <br /><br />
+                    <span>//</span> experience tutoring for Whitworth University's Computer Science department <br />
+                    
                 </p>
 
                 <hr class="line-break">
@@ -57,7 +58,7 @@
                 <p class="tab">
                     <span>//</span> Video Games<br /><br />
                     <span>//</span> Digital Art<br /><br />
-                    <span>//</span> PC Building<br />
+                    <span>//</span> Gardening<br />
                 </p>
                 </div>
   
